--- a/slides.tex
+++ b/slides.tex
@@ -16,11 +16,9 @@
 
 \title{lmutils}
 \subtitle{Tools for blazingly fast statistical analysis}
-% \date{\today}
 \date{}
 \author{Josef Graf}
-% \institute{McMaster University}
-% \titlegraphic{\hfill\includegraphics[height=1.5cm]{logo.pdf}}
+\institute{McMaster University}
 
 \begin{document}
 
