Add more information to conclusion

--- a/slides.tex
+++ b/slides.tex
@@ -305,10 +305,13 @@ plots.r::grouped_forest_plot(
 \section[Conclusion]{Conclusion}
 
 \begin{frame}{Conclusion}
-  \begin{itemize}[<+->]
-    \item Thank you for listening!
-    \item Feel free to ask me questions anytime, I'm always happy to help or add new things. :)
-    \item \hyperlink{mailto:grafj1@mcmaster.ca}{grafj1@mcmaster.ca} or Josef Graf on Teams.
+  \begin{itemize}
+    \item<1-> Thank you for listening!
+    \item<2-> Feel free to ask me questions anytime, I'm always happy to help or add new things. :)
+    \item<2-> \hyperlink{mailto:grafj1@mcmaster.ca}{\textbf{grafj1@mcmaster.ca}} or \textbf{Josef Graf} on Teams.
+    \item<3-> The presentation is available at \hyperlink{https://github.com/mrvillage/lmutils-presentation}{github.com/mrvillage/lmutils-presentation}.
+    \item<3-> More information on lmutils can be found at \hyperlink{https://github.com/GMELab/lmutils.r}{github.com/GMELab/lmutils.r}.
+    \item<3-> More information on plots.r can be found at \hyperlink{https://github.com/GMELab/plots.r}{github.com/GMELab/plots.r}.
   \end{itemize}
 \end{frame}
 
