Add a couple small things

--- a/slides.tex
+++ b/slides.tex
@@ -18,7 +18,7 @@
 \subtitle{Tools for blazingly fast statistical analysis}
 \date{}
 \author{Josef Graf}
-\institute{McMaster University}
+\institute{Department of Computing and Software, McMaster University}
 
 \begin{document}
 
@@ -33,6 +33,7 @@
 
 \begin{frame}{Context}
   \begin{itemize}[<+->]
+    \item RARity uses a large multiple linear regression to calculate the $R^2$ value between a set of gene blocks and a set of phenotypes, finding the heritability of the phenotypes.
     \item The original code was written in \textbf{148 lines} of pure R,
       and by no fault of the original author (purely that of R) was slow.
     \item A single phenotype and gene block took
