--- a/slides.tex
+++ b/slides.tex
@@ -152,7 +152,7 @@ lmutils::save(
     list("file1.csv", matrix(1:9, nrow=3), 1:3,
       data.frame(a=1:3, b=4:6), mat),
     c("file1.tsv", "file2.rkyv.gz", "file3.rkyv",
-      "file4.rdata", "file5.tx.gz")),
+      "file4.rdata", "file5.txt.gz")),
 )
 \end{verbatim}
 \end{frame}
